--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "deps": "^1.0.0",
     "framer-motion": "^11.14.4",
     "locomotive-scroll": "^5.0.0-beta.21",
